# nu-drift

./: .gitignore  Cargo.toml  config.toml.template  starter_prompt.md
scripts/: check_basecamp.nu  last_built.nu  needs_revisiting.nu
src/: main.rs  types.rs  update.rs
