[package]
name = "nu-drift"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
